--- a/src/app/main/content/apps/chat/chat-view/chat-view.component.scss
+++ b/src/app/main/content/apps/chat/chat-view/chat-view.component.scss
@@ -32,6 +32,7 @@
 
         #chat-content {
             background: transparent;
+            overflow: auto;
 
             .message-row {
                 padding: 16px;
