--- a/src/app/main/content/pages/authentication/forgot-password-2/forgot-password-2.component.scss
+++ b/src/app/main/content/pages/authentication/forgot-password-2/forgot-password-2.component.scss
@@ -37,7 +37,6 @@
             width: 400px;
             min-width: 400px;
             max-width: 400px;
-            height: 100%;
             background: #FFFFFF;
             @include mat-elevation(7);
 
