--- a/src/app/main/content/pages/authentication/register-2/register-2.component.scss
+++ b/src/app/main/content/pages/authentication/register-2/register-2.component.scss
@@ -37,7 +37,6 @@
             width: 400px;
             min-width: 400px;
             max-width: 400px;
-            height: 100%;
             background: #FFFFFF;
             @include mat-elevation(7);
 
@@ -99,10 +98,10 @@
                     }
 
                     .terms {
-                        font-size: 13px;
                         margin: 16px 0 32px 0;
 
                         a {
+                            font-size: 16px;
                             margin-left: 4px;
                         }
                     }
