--- a/src/app/main/content/pages/authentication/register/register.component.scss
+++ b/src/app/main/content/pages/authentication/register/register.component.scss
@@ -52,10 +52,10 @@
                     }
 
                     .terms {
-                        font-size: 13px;
                         margin: 16px 0 32px 0;
 
                         a {
+                            font-size: 16px;
                             margin-left: 4px;
                         }
                     }
